--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -195,6 +195,9 @@ tr:last-child td {
 
 
 
+.report-overview {
+  text-align: center;
+}
 
 
   
@@ -665,7 +668,7 @@ function renderSchoolAnalytics(records, termName, year, intelligence, schoolName
     padding-bottom: 6px;
     margin-bottom: 12px;
   ">
-    <h3 style="margin:0; text-align:center;">${schoolName}</h3>
+   <h3 style="margin:0;">${schoolName}</h3>
 
     <div style="font-size:0.9em;color:#555;">
       <strong>Class:</strong> ${className} &nbsp; | &nbsp;
