--- a/reports.html
+++ b/reports.html
@@ -965,7 +965,7 @@ function splitLearnerIntoPages() {
         block.getBoundingClientRect().bottom -
         currentPage.getBoundingClientRect().top;
 
-      if (blockBottom > maxHeight) {
+      if (blockBottom > maxHeight + 20)  {
         // create new page
         const newPage = document.createElement("div");
         newPage.className = "a4-page learner-page";
@@ -1466,12 +1466,6 @@ window.downloadPDF = async function () {
   const first = results?.[0];
  
   const cards = clone.querySelectorAll(".learner-card");
-
-
-// 🔥 CLEAN ANY EXISTING PAGE BREAKS (CRITICAL)
-clone.querySelectorAll(".learner-card").forEach(card => {
-  card.style.pageBreakBefore = "";
-});
 
 
   
