--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -263,10 +263,146 @@ const supabase = createClient(
   "sb_publishable_-BGJLAySaH7bQ5lBIZF9zg_eohK-xEn"
 );
 
+
 const SYSTEM_YEAR = "2026";
 let results = [];
 
-bv 
+let trendMap = {};
+let avgMap = {}; // make it global so downloadPDF can access it
+ 
+let previousRecords = [];
+let previousAverages = {};
+
+function levelToScore(level) {
+  switch (level) {
+    case "Below Expectations": return 1;
+    case "Approaching Expectations": return 2;
+    case "Meeting Expectations": return 3;
+    case "Exceeding Expectations": return 4;
+    default: return 0;
+  }
+}
+
+  
+
+const levelColor = {
+  "Below Expectations": "#f8d7da",
+  "Approaching Expectations": "#fff3cd",
+  "Meeting Expectations": "#d4edda",
+  "Exceeding Expectations": "#cce5ff"
+};
+
+
+  
+const termSelect = document.getElementById("termSelect");
+const viewMode = document.getElementById("viewMode");
+const filterBox = document.getElementById("filterBox");
+const reportDiv = document.getElementById("report");
+const status = document.getElementById("status");
+
+/* ========== AUTH ========== */
+const { data: { user } } = await supabase.auth.getUser();
+if (!user) location.href = "index.html";
+
+/* ========== LOAD TERMS ========== */
+const { data: terms } = await supabase
+  .from("terms")
+  .select("id, name")
+  .order("name");
+
+termSelect.innerHTML =
+  `<option value="">Select term</option>` +
+  terms.map(t => `<option value="${t.id}">${t.name}</option>`).join("");
+
+
+
+ 
+/* ========== MAIN LOAD ========== */
+async function loadReport() {
+  reportDiv.innerHTML = "";
+  filterBox.innerHTML = "";
+  status.innerText = "";
+
+  const term_id = termSelect.value;
+  if (!term_id) return;
+
+  const termName = terms.find(t => t.id === term_id)?.name;
+
+
+/* ===== LEARNER TERM AVERAGES FOR GRAPHS ===== */
+const { data: termAverages } = await supabase
+  .from("learner_term_averages") // ✅ the view you already created
+  .select("admission_number, term, average_score")
+  .eq("academic_year", SYSTEM_YEAR);
+
+
+
+
+
+  
+  /* ===== AVERAGES ===== */
+  const { data: averages } = await supabase
+    .from("term_subject_report_view")
+    .select("first_name,last_name,subject_name,average_score,achievement_level")
+    .eq("term", termName)
+  
+
+trendMap = {};
+
+termAverages?.forEach(r => {
+  if (!trendMap[r.admission_number]) {
+    trendMap[r.admission_number] = {};
+  }
+  trendMap[r.admission_number][r.term] = Number(r.average_score);
+});
+
+
+const previousTerm = terms
+  .map(t => t.name)
+  .sort()
+  .filter(t => t < termName)
+  .slice(-1)[0];
+
+
+ 
+
+if (previousTerm) {
+
+  const { data } = await supabase
+    .from("assessment_results_view")
+    .select("*")
+    .eq("term", previousTerm)
+    .eq("academic_year", SYSTEM_YEAR);
+
+  previousRecords = data || [];
+
+  previousRecords.forEach(r => {
+    const adm = r.admission_number;
+    const score = levelToScore(r.achievement_level);
+
+    if (!previousAverages[adm]) {
+      previousAverages[adm] = { total: 0, count: 0 };
+    }
+
+    previousAverages[adm].total += score;
+    previousAverages[adm].count++;
+  });
+}
+
+
+
+avgMap = {}; // populate it as before
+averages.forEach(a => {
+  const student = `${a.first_name} ${a.last_name}`;
+  const subj = a.subject_name.trim();
+  avgMap[student] ??= {};
+  avgMap[student][subj] = a;
+});
+
+  
+
+
+  
 
   /* ===== RAW RESULTS ===== */
 
