--- a/reports.html
+++ b/reports.html
@@ -245,12 +245,12 @@ table {
   <button onclick="downloadPDF()">
     ⬇️ Download Summary Report<br>
     <small>Recommended for parents & learners</small>
-  </button>
+  </button><br>
 
   <button onclick="downloadDetailedPDF()">
     ⬇️ Download Detailed Assessment Report<br>
     <small>For teachers & internal review</small>
-  </button>
+  </button><br>
 
 
   <button onclick="downloadSchoolAnalyticsPDF()">
